fixing icons on mobile

--- a/style/task.css
+++ b/style/task.css
@@ -136,7 +136,7 @@ div {
 
   &.pause {
     & [name='task-name']::after {
-      content: '⏸';
+      content: '❙❙';
     }
   }
 
